--- a/tcp-mocker-web/pom.xml
+++ b/tcp-mocker-web/pom.xml
@@ -35,8 +35,8 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
