--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 - docker
 
 script:
+  - "set -x"
   - "export BUILD_BRANCH=$(if [ \"$TRAVIS_PULL_REQUEST\" == \"false\" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)"
   - "./mvnw versions:set -DnewVersion=$BUILD_BRANCH-SNAPSHOT"
   - "if [ \"$TRAVIS_BRANCH\" = 'master' ] && [ \"$TRAVIS_PULL_REQUEST\" == 'false' ]; then ./mvnw versions:set -DnewVersion=1.0.${TRAVIS_BUILD_NUMBER}.RELEASE; fi"
