--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ jdk:
 services:
 - docker
 
+install: true
+
 script:
-  - export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi | sed -r s/[\\/:\"\<\>\|?*]/-/g)
-  - ./mvnw versions:set -DnewVersion=$BUILD_BRANCH-SNAPSHOT
-  - if [ "$TRAVIS_BRANCH" = 'master' ] && [ "$TRAVIS_PULL_REQUEST" == 'false' ]; then ./mvnw versions:set -DnewVersion=1.0.${TRAVIS_BUILD_NUMBER}.RELEASE; fi
-  - ./continuous-deployment/before-deploy.sh
-  - ./mvnw --settings continuous-deployment/mvnsettings.xml -e deploy -B
+- export BUILD_BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi | sed -r s/[\\/:\"\<\>\|?*]/-/g)
+- ./mvnw versions:set -DnewVersion=$BUILD_BRANCH-SNAPSHOT
+- if [ "$TRAVIS_BRANCH" = 'master' ] && [ "$TRAVIS_PULL_REQUEST" == 'false' ]; then ./mvnw versions:set -DnewVersion=1.0.${TRAVIS_BUILD_NUMBER}.RELEASE; fi
+- ./continuous-deployment/before-deploy.sh
+- ./mvnw --settings continuous-deployment/mvnsettings.xml -e deploy -B
 
 env:
   global:
