--- a/tcp-mocker-app-test/tcp-mocker-app/docker-compose.yml
+++ b/tcp-mocker-app-test/tcp-mocker-app/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   tcp-mocker-app:
-    image: tcpmocker/tcp-mocker-app:${TCP_MOCKER_APP_VERSION}
+    image: tcpmocker/tcp-mocker-app:${PROJECT_VERSION}
     environment:
       - LOGGING_LEVEL_IO_PAYWORKS_LABS_TCPMOCKER=TRACE
     volumes:
