--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,11 @@ before_script:
 
   - "./mvnw versions:set -DnewVersion=${PROJECT_VERSION}"
   - |
-    if [$MAVEN_DEPLOY_SKIP == "false"]; then
+    if [ $MAVEN_DEPLOY_SKIP == "false" ]; then
       openssl aes-256-cbc -K $encrypted_a3a4db86818a_key -iv $encrypted_a3a4db86818a_iv \
       -in continuous-deployment/payworks_sign_key.asc.enc -d | gpg --fast-import
+    else
+      exit $?
     fi
 script:
   - "./mvnw -Dmaven.deploy.skip=${MAVEN_DEPLOY_SKIP} --settings continuous-deployment/mvnsettings.xml -e deploy -B"
