--- a/pom.xml
+++ b/pom.xml
@@ -85,26 +85,27 @@
 
     <properties>
         <!-- Maven -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
 
         <!-- Project -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies -->
-        <spring-boot.version>2.0.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
         <springfox.version>2.9.2</springfox.version>
         <testng.version>6.14.3</testng.version>
-        <hamcrest.version>2.0.0.0</hamcrest.version>
-        <hamcrest-optional.version>1.1.3</hamcrest-optional.version>
-        <guava.version>27.0-jre</guava.version>
-        <apache-commons.version>3.8.1</apache-commons.version>
+        <hamcrest.version>2.1</hamcrest.version>
+        <hamcrest-optional.version>1.1.4</hamcrest-optional.version>
+        <guava.version>27.1-jre</guava.version>
+        <apache-commons.version>3.9</apache-commons.version>
         <commons-io.version>2.6</commons-io.version>
-        <test-containers.version>1.10.2</test-containers.version>
+        <testcontainers.version>1.11.3</testcontainers.version>
 
         <!-- Plugins -->
-        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.22.1</maven-failsafe-plugin.version>
@@ -115,7 +116,7 @@
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
         <guava-beta-checker.version>1.0</guava-beta-checker.version>
         <plexus-compiler-javac-errorprone.version>2.8.5</plexus-compiler-javac-errorprone.version>
-        <google-errorprone.version>2.3.2</google-errorprone.version>
+        <google-errorprone.version>2.3.3</google-errorprone.version>
         <spotify-dockerfile-maven-plugin.version>1.4.8</spotify-dockerfile-maven-plugin.version>
         <sortpom-maven-plugin.version>2.10.0</sortpom-maven-plugin.version>
     </properties>
@@ -190,7 +191,7 @@
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>java-hamcrest</artifactId>
+                <artifactId>hamcrest-core</artifactId>
                 <version>${hamcrest.version}</version>
             </dependency>
             <dependency>
@@ -238,7 +239,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers</artifactId>
-                <version>${test-containers.version}</version>
+                <version>${testcontainers.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -262,7 +263,7 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>java-hamcrest</artifactId>
+            <artifactId>hamcrest-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -312,9 +313,15 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <compilerId>javac-with-errorprone</compilerId>
-                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                        <release>${maven.compiler.release}</release>
                         <annotationProcessorPaths>
+                            <path>
+                                <groupId>com.google.errorprone</groupId>
+                                <artifactId>error_prone_core</artifactId>
+                                <version>${google-errorprone.version}</version>
+                            </path>
                             <path>
                                 <groupId>com.google.guava</groupId>
                                 <artifactId>guava-beta-checker</artifactId>
@@ -322,22 +329,24 @@
                             </path>
                         </annotationProcessorPaths>
                         <compilerArgs>
-                            <arg>-XepDisableAllChecks</arg>
-                            <arg>-Xep:BetaApi:ERROR</arg>
+                            <arg>-Xplugin:ErrorProne</arg>
+                            <arg>-XDcompilePolicy=simple</arg>
+                            <arg>-XDepDisableAllChecks</arg>
+                            <arg>-XDep:BetaApi:ERROR</arg>
                         </compilerArgs>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.codehaus.plexus</groupId>
+                                <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                                <version>${plexus-compiler-javac-errorprone.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.google.errorprone</groupId>
+                                <artifactId>error_prone_core</artifactId>
+                                <version>${google-errorprone.version}</version>
+                            </dependency>
+                        </dependencies>
                     </configuration>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.codehaus.plexus</groupId>
-                            <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                            <version>${plexus-compiler-javac-errorprone.version}</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>com.google.errorprone</groupId>
-                            <artifactId>error_prone_core</artifactId>
-                            <version>${google-errorprone.version}</version>
-                        </dependency>
-                    </dependencies>
                     <executions>
                         <execution>
                             <id>default-testCompile</id>
@@ -347,8 +356,10 @@
                             <phase>test-compile</phase>
                             <configuration>
                                 <compilerArgs>
-                                    <arg>-XepDisableAllChecks</arg>
-                                    <arg>-Xep:BetaApi:OFF</arg>
+                                    <arg>-Xplugin:ErrorProne</arg>
+                                    <arg>-XDcompilePolicy=simple</arg>
+                                    <arg>-XDepDisableAllChecks</arg>
+                                    <arg>-XDep:BetaApi:OFF</arg>
                                 </compilerArgs>
                             </configuration>
                         </execution>
