--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,6 @@
         <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
         <guava-beta-checker.version>1.0</guava-beta-checker.version>
-        <plexus-compiler-javac-errorprone.version>2.8.5</plexus-compiler-javac-errorprone.version>
         <google-errorprone.version>2.3.3</google-errorprone.version>
         <spotify-dockerfile-maven-plugin.version>1.4.8</spotify-dockerfile-maven-plugin.version>
         <sortpom-maven-plugin.version>2.10.0</sortpom-maven-plugin.version>
@@ -316,6 +315,10 @@
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
                         <release>${maven.compiler.release}</release>
+                        <compilerArgs>
+                            <arg>-XDcompilePolicy=simple</arg>
+                            <arg>-Xplugin:ErrorProne -Xep:BetaApi:ERROR</arg>
+                        </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>com.google.errorprone</groupId>
@@ -328,42 +331,7 @@
                                 <version>${guava-beta-checker.version}</version>
                             </path>
                         </annotationProcessorPaths>
-                        <compilerArgs>
-                            <arg>-Xplugin:ErrorProne</arg>
-                            <arg>-XDcompilePolicy=simple</arg>
-                            <arg>-XDepDisableAllChecks</arg>
-                            <arg>-XDep:BetaApi:ERROR</arg>
-                        </compilerArgs>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.plexus</groupId>
-                                <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                                <version>${plexus-compiler-javac-errorprone.version}</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>com.google.errorprone</groupId>
-                                <artifactId>error_prone_core</artifactId>
-                                <version>${google-errorprone.version}</version>
-                            </dependency>
-                        </dependencies>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <id>default-testCompile</id>
-                            <goals>
-                                <goal>testCompile</goal>
-                            </goals>
-                            <phase>test-compile</phase>
-                            <configuration>
-                                <compilerArgs>
-                                    <arg>-Xplugin:ErrorProne</arg>
-                                    <arg>-XDcompilePolicy=simple</arg>
-                                    <arg>-XDepDisableAllChecks</arg>
-                                    <arg>-XDep:BetaApi:OFF</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
