major modules refactoring, prepare to servlet -> reactive and jpa -> jdbc switch

--- a/tcp-mocker-app/Dockerfile
+++ b/tcp-mocker-app/Dockerfile
@@ -2,15 +2,15 @@ FROM openjdk:11-jre-slim
 
 MAINTAINER Andrey Saksonov <andrey.saksonov@payworks.com>
 
-VOLUME /tmp
+ARG TCPPORT=10001
+ARG TCPMAPPINGSPATH=/var/lib/tcp-mocker/tcp-mappings
+
+ARG WEBPORT=8080
 
 ARG APP_DIR
 ARG APP_MAIN
 
-ARG WEBPORT=8080
-
-ARG TCPPORT=10001
-ARG TCPMAPPINGSPATH=/var/lib/tcp-mocker/tcp-mappings
+VOLUME /tmp
 
 COPY ${APP_DIR}/BOOT-INF/lib /app/lib
 COPY ${APP_DIR}/META-INF /app/META-INF
@@ -18,13 +18,11 @@ COPY ${APP_DIR}/BOOT-INF/classes /app
 
 ENV MOCKSERVER_PORT=${TCPPORT} \
     MOCKSERVER_TCPMAPPINGSPATH=${TCPMAPPINGSPATH} \
-    SERVER_PORT=${WEBPORT}
+    SERVER_PORT=${WEBPORT} \
+    JAVA_OPTIONS="-Dfile.encoding=UTF-8" \
+    JAVA_MAIN=$APP_MAIN
 
-ENV JAVA_OPTIONS="-Dfile.encoding=UTF-8"
-ENV JAVA_MAIN=$APP_MAIN
-
-EXPOSE $TCPPORT
-EXPOSE $WEBPORT
+EXPOSE $TCPPORT $WEBPORT
 
 VOLUME ["${TCPMAPPINGSPATH}"]
 
