major modules refactoring, prepare to servlet -> reactive and jpa -> jdbc switch

--- a/tcp-mocker-app/Dockerfile
+++ b/tcp-mocker-app/Dockerfile
@@ -16,9 +16,9 @@ COPY ${APP_DIR}/BOOT-INF/lib /app/lib
 COPY ${APP_DIR}/META-INF /app/META-INF
 COPY ${APP_DIR}/BOOT-INF/classes /app
 
-ENV MOCKSERVER_PORT=${TCPPORT} \
-    MOCKSERVER_TCPMAPPINGSPATH=${TCPMAPPINGSPATH} \
-    SERVER_PORT=${WEBPORT} \
+ENV MOCKSERVER_PORT=$TCPPORT \
+    MOCKSERVER_TCPMAPPINGSPATH=$TCPMAPPINGSPATH \
+    SERVER_PORT=$WEBPORT \
     JAVA_OPTIONS="-Dfile.encoding=UTF-8" \
     JAVA_MAIN=$APP_MAIN
 
