--- a/pom.xml
+++ b/pom.xml
@@ -93,16 +93,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies -->
-        <spring-boot.version>2.1.11.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.13.RELEASE</spring-boot.version>
         <springfox.version>2.9.2</springfox.version>
-        <testng.version>6.14.3</testng.version>
+        <testng.version>7.2.0</testng.version>
         <hamcrest.version>2.2</hamcrest.version>
         <hamcrest-optional.version>1.1.5</hamcrest-optional.version>
-        <guava.version>28.1-jre</guava.version>
-        <apache-commons.version>3.9</apache-commons.version>
+        <guava.version>28.2-jre</guava.version>
+        <apache-commons.version>3.10</apache-commons.version>
         <commons-io.version>2.6</commons-io.version>
-        <groovy.version>2.5.8</groovy.version>
-        <testcontainers.version>1.12.4</testcontainers.version>
+        <groovy.version>3.0.2</groovy.version>
+        <testcontainers.version>1.13.0</testcontainers.version>
 
         <!-- Plugins -->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -110,20 +110,27 @@
         <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <guava-beta-checker.version>1.0</guava-beta-checker.version>
         <google-errorprone.version>2.3.4</google-errorprone.version>
         <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
-        <sortpom-maven-plugin.version>2.10.0</sortpom-maven-plugin.version>
-        <go-offline-maven-plugin.version>1.2.4</go-offline-maven-plugin.version>
+        <sortpom-maven-plugin.version>2.11.0</sortpom-maven-plugin.version>
+        <go-offline-maven-plugin.version>1.2.5</go-offline-maven-plugin.version>
+        <awaitility.version>4.0.2</awaitility.version>
+        <netty.version>4.1.48.Final</netty.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>${awaitility.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.payworks.labs.tcpmocker</groupId>
                 <artifactId>tcp-mocker-app</artifactId>
@@ -237,6 +244,13 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers</artifactId>
                 <version>${testcontainers.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>${netty.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
