--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,6 @@
     <properties>
         <!-- Maven -->
         <maven.deploy.skip>true</maven.deploy.skip>
-        <!-- https://github.com/google/error-prone/issues/1106 -->
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.release>11</maven.compiler.release>
@@ -93,17 +92,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies -->
-        <spring-boot.version>2.4.0</spring-boot.version>
+        <spring-boot.version>2.4.3</spring-boot.version>
         <springfox.version>2.9.2</springfox.version>
-        <guava.version>30.0-jre</guava.version>
-        <commons-lang3.version>3.11</commons-lang3.version>
+        <!-- TODO: migrate to https://github.com/springdoc/springdoc-openapi -->
+        <guava.version>30.1-jre</guava.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-io.version>2.8.0</commons-io.version>
-        <netty.version>4.1.55.Final</netty.version>
+        <netty.version>4.1.59.Final</netty.version>
         <groovy.version>3.0.7</groovy.version>
-        <testng.version>7.3.0</testng.version>
+        <testng.version>7.4.0</testng.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <hamcrest-optional.version>1.2.0</hamcrest-optional.version>
-        <testcontainers.version>1.15.0</testcontainers.version>
+        <spotify-hamcrest-optional.version>1.2.0</spotify-hamcrest-optional.version>
+        <testcontainers.version>1.15.2</testcontainers.version>
         <awaitility.version>4.0.3</awaitility.version>
 
         <!-- Plugins -->
@@ -118,10 +118,10 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <guava-beta-checker.version>1.0</guava-beta-checker.version>
-        <google-errorprone.version>2.4.0</google-errorprone.version>
+        <google-errorprone.version>2.5.1</google-errorprone.version>
         <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
-        <sortpom-maven-plugin.version>2.12.0</sortpom-maven-plugin.version>
-        <go-offline-maven-plugin.version>1.2.7</go-offline-maven-plugin.version>
+        <sortpom-maven-plugin.version>2.13.1</sortpom-maven-plugin.version>
+        <go-offline-maven-plugin.version>1.2.8</go-offline-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -211,7 +211,7 @@
             <dependency>
                 <groupId>com.spotify</groupId>
                 <artifactId>hamcrest-optional</artifactId>
-                <version>${hamcrest-optional.version}</version>
+                <version>${spotify-hamcrest-optional.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
